@@ -14,11 +14,13 @@ import jakarta.mail.internet.MimeMessage;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Value;
+import org.springframework.core.io.ClassPathResource;
 import org.springframework.mail.javamail.JavaMailSender;
 import org.springframework.mail.javamail.MimeMessageHelper;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
+import java.io.InputStream;
 import java.nio.file.Files;
 import java.nio.file.Paths;
 
@@ -64,7 +66,10 @@ public class EmailCodeServiceImpl implements EmailCodeService {
 
             helper.setSubject("青途优卷 邮箱验证码");
 
-            String htmlContent = new String(Files.readAllBytes(Paths.get("email/EmailHtml.html")));
+            ClassPathResource resource = new ClassPathResource("email/EmailHtml.html");
+            InputStream inputStream = resource.getInputStream();
+            String htmlContent = new String(inputStream.readAllBytes());
+            inputStream.close();
             htmlContent = htmlContent.replace("123456", code);
             helper.setText(htmlContent, true);
 
